--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,48 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow">
+    <link rel="alternate" href="https://streamhaven.netlify.app" hreflang="en">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/logo512.png" />
     <meta
-      name="StreamHaven"
-      content="Watch movies and shows for free"
+      name="description"
+      content="StreamHaven - Watch the latest movies, popular TV shows, and exclusive content for free. Stream anytime, anywhere with no subscriptions or hidden fees."
     />
+    <meta
+      name="keywords"
+      content="free streaming, watch movies online, TV shows, free movies, StreamHaven, no subscription, unlimited streaming"
+    />
+    <meta name="author" content="StreamHaven Team" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="mask-icon" href="%PUBLIC_URL%/logo512.png" />
+    <link rel="canonical" href="https://streamhaven.netlify.app/browse">
+    
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="canonical" href="https://streamhaven.netlify.app/browse">
+    <meta property="og:title" content="StreamHaven">
+    <meta property="og:description" content="StreamHaven - Watch the latest movies, popular TV shows, and exclusive content for free. Stream anytime, anywhere with no subscriptions or hidden fees.">
+    <meta property="og:image" content="https://streamhaven.netlify.app/static/media/StreamHaven.ef15eb93469ff0b77a94.png">
+    <meta property="og:url" content="https://streamhaven.netlify.app/browse">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="https://streamhaven.netlify.app/static/media/StreamHaven.ef15eb93469ff0b77a94.png">
+    <meta name="twitter:title" content="StreamHaven">
+    <meta name="twitter:description" content="StreamHaven - Watch the latest movies, popular TV shows, and exclusive content for free. Stream anytime, anywhere with no subscriptions or hidden fees.">
+    <meta name="twitter:image" content="https://streamhaven.netlify.app/static/media/StreamHaven.ef15eb93469ff0b77a94.png">
     <title>StreamHaven</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      if('serviceWorker' in navigator){
+        navigator.serviceWorker.register('./sw.js').then((res) => {
+          console.warn(res);
+        }).catch(err=> console.error(err))
+      }
+    </script>
   </body>
 </html>
